@@ -41,6 +41,7 @@ A reset of the database is needed.
 - https://github.com/eclipse-syson/syson/issues/348[#348] [diagrams] The semantic representation of the Succession edge is not correct.
 - https://github.com/eclipse-syson/syson/issues/356[#356] [action-flow-view] The Allocate edge is not displayed in the Action Flow View diagram.
 - https://github.com/eclipse-syson/syson/issues/403[#403] [diagrams] Wrong computation of the Succession owner
+- https://github.com/eclipse-syson/syson/issues/407[#407] [diagrams] Fix the owner membership of dropped elements
 
 === Improvements
 
